welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: value et is not a member of Boolean
while(2*b!=co et b>1){
              ^