welcome.lessons.welcome.variables.RunHalf.scala.code
var b=0
var co=0
while(2*b!=co et b>1){
	
	if (estSurBiscuit()==true){
	b=b+1
	}
	if (estSurOrange()==true){
		co=co+1
	}
	avance()
}
